public/style.css
html, body {
  margin: 0;
  padding: 0;
  transition: all 0.3s ease;
}

.AK-page {
  width: 100%;
  position: absolute;
  z-index: 20;
}

.AK-container-main {
  
  position: absolute;
  top: 650px;
  left: 966px;


  background-color: white;
  display: flex;
  width: 29.505%;
  flex-direction: column;
  border: 1px solid rgb(219, 218, 218);
}

.AK-upper-box {
  display: flex;
  height: 78.7%;
  padding-bottom: 4%;
}

.AK-lower-box {
  display: flex;
  height: 21.3%;
  font-family: opensans, sans-serif;
  font-size: 16px;
  font-weight: 400;
  justify-content: flex-start;
  align-items: center;
  color: rgb(76, 76, 76);
  padding: 4% 4% 4% 8%;
  border-top: 1px solid rgb(219, 218, 218);
}

.AK-widget-box {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.AK-trip-code {
  color: rgb(118, 118, 118);
  font-size: 12px;
  text-align: right;
  margin-top: 2%;
  margin-right: 2.4%;
  font-family: opensans, sans-serif;
}

.AK-container-pricing {
  display: flex;
  flex-direction: row;
  margin-top: 5px;
}

.AK-pricing-text {
  font-size: 15px;
  font-family: Futura-Med;
  color: rgb(118, 118, 118);
  margin-bottom: 3%;
}

.AK-price {
  margin-left: 7%;
}

.AK-price-no-wrap {
  width: 300px;
}

.AK-price-wrapper {
  flex-wrap: wrap;
  width: 100%;
  flex-direction: row;
  display: flex;
}

.AK-msrp {
  margin-left: 11%;
  color: rgb(141, 140, 140);
}

.AK-msrp-hidden {
  visibility: hidden;
}

.AK-savings-text {
  font-size: 14px;
  font-family: Futura-Med;
  margin-bottom: 3px;
}

.AK-savings {
  margin-left: 5.5%;
  color: rgb(196, 8, 47);
  display: flex;
  flex-direction: row;
  font-family: Futura-Next;
}

.AK-savings-hidden {
  visibility: hidden;
}

.AK-currency1 {
  font-size: 21px;
  font-family: Futura-Next;
  color: rgb(76, 76, 76);
  margin-top: 4px;
}

.AK-currency2 {
  font-family: Futura-Next;
  font-size: 18px;
}

.AK-price-tag {
  height: 23px;
}

.AK-container-img {
  margin-top: 3px;
  margin-right: 2px;
}

.AK-container-buttons {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  padding: 0 2%;
  align-items: center;
}

.AK-button1 {
  border-radius: 25px;
  height: 50px;
  width: 42%;
  color: white;
  background-color: rgb(196, 8, 47);
  font-weight: bold;
  font-size: 14px;
  outline: none;
  font-family: Futura-Heavy;
}

.AK-button1:hover {
  cursor: pointer;
}

.AK-button2 {
  border-radius: 24px;
  height: 48px;
  width: 42%;
  color: rgb(196, 8, 47);
  border: 1.5px solid rgb(196, 8, 47);
  font-weight: bold;
  font-size: 14px;
  outline: none;
  font-family: Futura-Heavy;
}

.AK-button2:hover {
  background-color: rgb(196, 8, 47);
  color: white;
  cursor: pointer;
}

.AK-container-reviews {
  font-size: 14px;
  font-family: opensans, sans-serif;
  margin: 3% 0px 4.2% 7%;
  color: rgb(76, 76, 76);
  font-weight: 100;
  width: auto;
  display: flex;
}

.AK-stars-reviews {
  height: 20px;
}

.AK-reviews {
  width: auto;
  border-bottom-color: rgb(225, 13, 57);
  border-bottom-style: dotted;
  border-bottom-width: 1px;
  margin-left: 3%;
}

.AK-reviews:hover {
  cursor: pointer;
}

.AK-container-calendar-page {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  overflow-y: auto;
  z-index: 10;

  opacity: 0;
  transition: opacity 0.2s;
}

.AK-fade-in {
  opacity: 1;
}

.AK-top-bar {
  width: 100%;
  height: 69px;
  border-bottom: 1px solid rgb(211, 211, 211);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 20;
  background-color: rgb(251, 251, 251);
  display: flex;
  flex-direction: row;
}

.AK-logo {
  margin: 13px 12px 9px 15px;
  width: 162px;
  height: 44px;
}

.AK-phone {
  margin-top: 25.4px;
  margin-left: 6.5px;
  width: 20px;
  height: 20px;
}

.AK-help {
  margin-left: 1.1%;
  margin-top: 13px;
  font-family: Futura-Heavy;
  color: rgb(76, 76, 76);
}

.AK-help-text {
  font-size: 12px;
  margin-top: 3.1%;
  margin-bottom: 3%;
  letter-spacing: 2.1px;
}

.AK-help-phone {
  font-size: 16px;
}

.AK-header {
  position: relative;
  margin-left: 20.5%;
  font-family: Futura-Next;
  color: rgb(76,76,76);
  margin-top: 23px;
  font-size: 23px;
}

.AK-return {
  color: rgb(76, 76, 76);
  display: flex;
  flex-direction: row;
  position: absolute;
  right: 0px;
  top: 0px;
  width: 110px;
  height: 100%;
  background-color: white;
  align-items: center;
  justify-content: space-evenly;
  border-left: 1px solid #f2f2f2;
}

.AK-return:hover {
  cursor: pointer;
}

.AK-back-text {
  font-family: Futura-Heavy;
  font-size: 16px;
  margin-left: 2px;
}

.AK-X {
  margin-top: 0px;
  margin-right: 6px;
  height: 19px;
  width: 19px;
  opacity: 0.8;
}

.AK-container-scroll {
  margin-top: 55px;
  position: absolute;
  width: 100%;
  height: auto;
  background-color: rgb(251, 251, 251);
  display: flex;
  flex-direction: column;
}

.AK-middle-section {
  height: 130.5px;
  width: 100%;
  display: flex;
  flex-direction: column;
  color: rgb(76, 76, 76);
  border-bottom: 1px solid rgb(230, 230, 230);
}

.AK-step1 {
  align-self: center;
  font-family: Futura-Med;
  font-size: 15px;
  margin-top: 45px;
  margin-left: 5px;
}

.AK-select-dates-header {
  align-self: center;
  font-family: Futura-Next;
  font-size: 30px;
  margin-top: 4px;
  margin-left: 5px;
}

.AK-container-legend {
  display: flex;
  flex-direction: row;
  height: 65px;
  border-left: 1px solid rgb(230, 230, 230);
  border-bottom: 1px solid rgb(230, 230, 230);
  border-right: 1px solid rgb(230, 230, 230);
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  margin: 0 8.92% 0 9.25%;
  align-items: center;
}

.AK-key {
  font-family: Futura-Heavy;
  font-size: 15px;
  margin-left: 1.72%;
  margin-top: 0.4%;
  color: rgb(66, 66, 66);
}

.AK-tooltip1 {
  display: flex;
  flex-direction: row;
  position: relative;
  width: 16.2%;
}

.AK-tooltip1:hover{
  cursor: pointer;
}
/* ... */

